--- a/bob3.ipynb
+++ b/bob3.ipynb
@@ -6,7 +6,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Penguin loves chipmunk so, so, so, so much"
+    "# Penguin loves chipmunk so, so, so much"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Chipmunk loves her penguin so so so much too"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chipmunk penguin and bob\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Chipmunk penguin and bob\")"
    ]
   },
   {
@@ -33,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
